crates/keron-lang/tests/corpus/errors/parse/for_three_idents.keron
val m: Map<String, Int> = {"a": 1}
for (a, b, c) in m { reconcile c }
